flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: quay.io/rhn_support_jaliang/python-pv-example:latest # 替換為你的 UBI 映像
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: todo-app
