flask-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todo-app-service
spec:
  port:
    targetPort: 5000
  to:
    kind: Service
    name: todo-app-service
    weight: 100
  wildcardPolicy: None
